# veracity-ai

./: .gitignore  CLAUDE.md  README.md  backlog.md  funding.yml  pyproject.toml  spec.md  system_prompt.md
.github/workflows/: tests.yml
src/veracity/: __init__.py  __main__.py  cli.py  llm.py  pipeline.py  rendering.py  schema.py
src/veracity/verifiers/: __init__.py  base.py  compute.py  hitl.py  reasoning.py  search.py  structure.py
tests/: test_basic.py
